--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
 REACT_APP_GROQ_API_KEY=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
 REACT_APP_HUME_API_KEY=qoWta1wzDMEscXpStxuOUXABf0c0IjAW39QlncalhwIfGGAb
+MONGO_URI=mongodb+srv://rahulthennarasu07:lego3011@veritascluster.fog1e.mongodb.net/?retryWrites=true&w=majority&appName=veritascluster
