--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,20 @@
     "@types/react-dom": "^19.0.3",
     "axios": "^1.7.9",
     "chart.js": "^4.4.8",
+    "cors": "^2.8.5",
     "cra-template": "1.2.0",
+    "dotenv": "^16.4.7",
+    "file-saver": "^2.0.5",
+    "jspdf": "^3.0.0",
     "mongodb": "^6.14.2",
+    "mongoose": "^8.12.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
+    "remark-gfm": "^4.0.1",
     "typescript": "^5.7.3",
     "web-vitals": "^4.2.4"
   },
