--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.15.1",
     "remark-gfm": "^4.0.1",
     "typescript": "^5.7.3",
     "web-vitals": "^4.2.4"
